# ics-compose

./: .gitignore  BUILD_INSTRUCTIONS.md  CODE_COMPARISON.md  README.md  TRANSFORMATION_SUMMARY.md  build.gradle.kts  gradle.properties  local.properties.template  plan.md  pr.json  pr_body.md  pubspec.yaml  pytest.ini  secrets.properties.example  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml
android/: build.gradle  gradle.properties
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
androidApp/: build.gradle.kts
androidApp/src/main/cpp/: CMakeLists.txt
androidApp/src/main/cpp/whisperjni/: io_github_givimad_whisperjni_WhisperJNI.cpp
composeApp/: build.gradle.kts  proguard-rules.pro
composeApp/src/main/: AndroidManifest.xml
docs/: live-captions-plan.md
e2e/: test_wasm_not_empty.py
eval/: .gitignore  README.md  config.py  requirements.txt  run_eval.sh
eval/golden/: manifest.json
eval/providers/: __init__.py  assemblyai.py  base.py  deepgram.py  soniox.py  streaming.py
eval/scoring/: metrics.py  normalize.py  scorecard.py  translate.py
eval/scripts/: bootstrap_refs.py  fetch_clips.py  generate_manifest.py  record.py  record_stream.py  translate.py
eval/tests/: test_scorecard.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: .gitignore  Info.plist  project.yml
iosApp/ics_ios/: ICSApp.swift
lib/: main.dart  twitter_client.dart
lib/twitter/: tweet.dart
mediakit/: README.md  build.gradle.kts
mediakit-api/: index.html  navigation.html
mediakit-api/mediakit/: package-list
mediakit-api/mediakit/com.livingpresence.mediakit/: index.html
mediakit-api/scripts/: pages.json  sourceset_dependencies.js
mediakit/api/android/: mediakit.api
mediakit/api/jvm/: mediakit.api
(+185 files in other folders)
